[package]
name = "bridges"
version = "0.6.0"
description = "A simple UDP-Serial interface."
readme = "README.md"
license = "MIT"
authors = ["Patrick José Pereira <patrickelectric@gmail.com>"]
homepage = "https://github.com/patrickelectric/bridges"
repository = "https://github.com/patrickelectric/bridges"
keywords = ["cli", "serial", "udp"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
bench = false
path = "src/main.rs"
name = "bridges"

[dependencies]
clap = { version = "3.0", features = ["derive"] }
hashbrown = "0.12"
lazy_static = "1.4"
serialport = "4.0"
