[package]
name = "bridges"
version = "0.10.1"
description = "A simple UDP-Serial interface."
readme = "README.md"
license = "MIT"
authors = ["Patrick José Pereira <patrickelectric@gmail.com>"]
homepage = "https://github.com/patrickelectric/bridges"
repository = "https://github.com/patrickelectric/bridges"
keywords = ["cli", "serial", "udp"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
bench = false
path = "src/main.rs"
name = "bridges"

[dependencies]
clap = { version = "3.0", features = ["derive"] }
futures = "0.3.31"
hashbrown = "0.12"
lazy_static = "1.4"
serialport = "4.3"
tokio = { version = "1.44.1", features = ["full"] }
tokio-serial = "5.4.5"
